fixed gap between icons

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -40,7 +40,6 @@
           display: inline-block;
 
           &-logo  {
-            margin-left: 30px;
             width: 34px;
             height: 34px;
           }
